--- a/.env
+++ b/.env
@@ -28,3 +28,13 @@ APP_SECRET=7e3f29e379a3f4af332af234e96f55ab
 # DATABASE_URL="mysql://root:@127.0.0.1:3306/mini-projet?serverVersion=5.7"
 DATABASE_URL="mysql://root:@127.0.0.1:3306/mini-projet?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mercure-bundle ###
+# See https://symfony.com/doc/current/mercure.html#configuration
+# The URL of the Mercure hub, used by the app to publish updates (can be a local URL)
+MERCURE_URL=https://127.0.0.1:8000/.well-known/mercure
+# The public URL of the Mercure hub, used by the browser to connect
+MERCURE_PUBLIC_URL=https://127.0.0.1:8000/.well-known/mercure
+# The secret used to sign the JWTs
+MERCURE_JWT_SECRET="!ChangeMe!"
+###< symfony/mercure-bundle ###
