--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "doctrine/doctrine-bundle": "^2.3",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.8",
+        "mercuryseries/flashy-bundle": "^4.0",
         "sensio/framework-extra-bundle": "^6.1",
         "spatie/async": "^1.5",
         "stripe/stripe-php": "^7.80",
@@ -19,6 +20,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "4.4.*",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/mercure-bundle": "^0.3.2",
         "symfony/proxy-manager-bridge": "4.4.*",
         "symfony/security-bundle": "4.4.*",
         "symfony/twig-bundle": "4.4.*",
